find_package(Qt4 COMPONENTS QtCore QtGui QtXml QtSql QtNetwork QtWebKit QtOpenGL REQUIRED)
include(${QT_USE_FILE})

SET(RIPPLE_INCLUDE_DIRECTORIES
    "${CMAKE_BINARY_DIR}"
    "${CMAKE_SOURCE_DIR}"
    "${CMAKE_SOURCE_DIR}/RippleLibrary"
    "${CMAKE_CURRENT_SOURCE_DIR}"
    )

LIST(APPEND RIPPLE_HEADERS
    stdafx.h
    )

LIST(APPEND RIPPLE_SOURCES
    main.cpp
    ripple.cpp
    stdafx.cpp
    )

set(RIPPLE_MOC_HEADERS
    ripple.h   
    )

QT4_WRAP_CPP(RIPPLE_MOC_SRCS ${RIPPLE_MOC_HEADERS})

LIST(APPEND RIPPLE_SOURCES ${RIPPLE_HEADERS} )
LIST(APPEND RIPPLE_SOURCES ${RIPPLE_MOC_HEADERS} )
LIST(APPEND RIPPLE_SOURCES ${RIPPLE_MOC_SRCS} )

include_directories(${CMAKE_CURRENT_BINARY_DIR})
include_directories(${RIPPLE_INCLUDE_DIRECTORIES})
include_directories(${QT_INCLUDE_DIR})

set(RIPPLE_LIBRARIES
    ${RIPPLELIBRARY_LIBRARY_NAME}
    )

IF (WTF_OS_MAC_OS_X)


SET(MAC_BUNDLE_RESOURCES "Ripple.icns")
SET_SOURCE_FILES_PROPERTIES(
      "Ripple.icns"
       PROPERTIES
       MACOSX_PACKAGE_LOCATION Resources
      )

    SET( MACOSX_BUNDLE_ICON_FILE Ripple.icns )

    ADD_EXECUTABLE(Ripple MACOSX_BUNDLE ${RIPPLE_SOURCES} ${MAC_BUNDLE_RESOURCES})

    SET(LIBS ${RIPPLE_LIBRARIES} )

    SET(DIRS ${QT_BINARY_DIR} ${CMAKE_BINARY_DIR}/bin)

    SET(APPS ${CMAKE_BINARY_DIR}/bin/Ripple.app)

ELSEIF (WTF_OS_WINDOWS)
	ADD_EXECUTABLE(Ripple WIN32 ${RIPPLE_SOURCES} Ripple.rc)
ELSE ()
    ADD_EXECUTABLE(Ripple ${RIPPLE_SOURCES})
ENDIF()

SET_TARGET_PROPERTIES(Ripple PROPERTIES OUTPUT_NAME Ripple)

TARGET_LINK_LIBRARIES(Ripple ${RIPPLE_LIBRARIES} ${QT_LIBRARIES} ${optionalLibs})

INSTALL(TARGETS Ripple DESTINATION ${CMAKE_BINARY_DIR}/bin)

